--- a/pages/editaProduto.html
+++ b/pages/editaProduto.html
@@ -69,6 +69,25 @@
     </div>
 
     <script>
+
+fetch('http://127.0.0.1:3333/validarToken', {
+            method: 'POST',
+            credentials: 'include', // Garante que cookies sejam enviados na requisição
+        })
+        .then((response) => response.json())
+        .then((data) => {
+            if (data.valid) {
+            console.log('Token válido:', data.decoded);
+            } else {
+            console.error('Token inválido ou expirado:', data.message);
+            alert('Sua sessão expirou. Faça login novamente.');
+            window.location.href = 'index.html'; // Redireciona para a página de login
+            }
+        })
+        .catch((error) => {
+            console.error('Erro ao validar token:', error);
+        });
+        
         // Função para recuperar o parâmetro 'id' da URL
         const getQueryParam = (param) => {
             const urlParams = new URLSearchParams(window.location.search);
