--- a/pages/estoque.html
+++ b/pages/estoque.html
@@ -59,4 +59,21 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Vx0pDdVB2qS7mfmu4K/rE3ke8QuSYBQquke8PbFPdFfGFRizMj2Aq4sqFbC2Ev5o" crossorigin="anonymous"></script>
 </body>
+<script>fetch('http://127.0.0.1:3333/validarToken', {
+    method: 'POST',
+    credentials: 'include', // Garante que cookies sejam enviados na requisição
+})
+.then((response) => response.json())
+.then((data) => {
+    if (data.valid) {
+    console.log('Token válido:', data.decoded);
+    } else {
+    console.error('Token inválido ou expirado:', data.message);
+    alert('Sua sessão expirou. Faça login novamente.');
+    window.location.href = 'index.html'; // Redireciona para a página de login
+    }
+})
+.catch((error) => {
+    console.error('Erro ao validar token:', error);
+});</script>
 </html>
